Fixes margins on mobile

--- a/src/styles/_docs.scss
+++ b/src/styles/_docs.scss
@@ -64,7 +64,7 @@
 }
 
 .docs-search-form {
-	margin-top: 50px;
+	margin-top: 80px;
 }
 
 .docs-edit {
@@ -417,6 +417,10 @@
 	.docs-video {
 		margin-left: 0;
 		margin-right: 0;
+	}
+
+	.docs-search-form {
+		margin-top: 50px;
 	}
 }
 
